# qt-creator

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitignore-blame  .gitmodules  .gitreview  .luarc.json  .qmake.conf  0001-Make-the-welcome-screen-into-plugins.patch  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GPL_EXCEPTION.txt  GPL_EXCEPTION_ADDENDUM.TXT  GPL_Exception_Addendum.txt  HACKING  LGPL_EXCEPTION.TXT  LICENSE.LGPLv21  LICENSE.LGPLv3  LICENSE.PREVIEW.COMMERCIAL  README  README.md  TESTING.md  autotest.pro  clangstaticanalyzer.pro  conanfile.txt  docs.pri  fix_makefile_header_dependencies.sh  fossil.pro  qmlprofiler.pro  qt_attributions.json  qtcreator.pri  qtcreator.pro  qtcreator.qbp  qtcreator.qbs  qtcreator_ide_branding.pri  qtcreator_testvars.pri  qtcreatordata.pri  qtcreatorlibrary.pri  (+2 more)
cmake/: CMakeLists.txt  Config.cmake.in  CreatePythonXY.cmake  FindClang.cmake  FindCrashpad.cmake  FindDesignerComponents.cmake  FindGoogleBenchmark.cmake  FindGoogletest.cmake  FindQbs.cmake  FindQt5.cmake  Findelfutils.cmake  Findyaml-cpp.cmake  InstallDependentSharedObjects.cmake.in  QtCreatorAPI.cmake  QtCreatorAPIInternal.cmake  QtCreatorConfig.cmake.in  QtCreatorDocumentation.cmake  QtCreatorIDEBranding.cmake  QtCreatorSbom.cmake  QtCreatorTranslations.cmake  QtcSeparateDebugInfo.Info.plist.in  QtcSeparateDebugInfo.cmake  Utils.cmake
doc/: CMakeLists.txt  README.md  addressbook-sdk.qdoc  classic.css  coding-style.qdoc  doc.pri  doc.pro  doc.qbs  doc_targets.pri  eike_doc.patch  fixnavi.pl  fossil-online.qdocconf  fossil.qdocconf  linuxdev-keys.qdocinc  linuxdev-processes.qdocinc  linuxdev.qdoc  maemodev.qdoc  meegodev.qdoc  qt-defines.qdocconf  qt-html-templates.qdocconf  qtcreator-faq.qdoc  qtcreator-online-qt4.qdocconf  qtcreator-online.qdocconf  qtcreator-qt4.qdocconf  qtcreator.qch  qtcreator.qdoc  qtcreator.qdocconf  runframework.dia  symbiandev.qdoc  workbench.qdoc  workbench.qtdocconf
doc/api/: api.pro  coding-style.qdoc  creating-plugins.qdoc  external-tool-spec.qdoc  first-plugin.qdoc  getting-and-building.qdoc  plugin-lifecycle.qdoc  plugin-metadata.qdoc  plugin-specifications.qdoc  pluginmanager.qdoc  qtcreator-api.qdoc  qtcreator-api.qdocconf  qtcreator-code-snippet-config.qdoc  qtcreator-dev-online-qt4.qdocconf  qtcreator-dev-online.qdocconf  qtcreator-dev-qt4.qdocconf  qtcreator-dev-wizards.qdoc  qtcreator-dev.qdoc  qtcreator-dev.qdocconf  qtcreator-documentation.qdoc  qtcreator-ui-text.qdoc
doc/config/: compat.qdocconf  fossil.qdocconf  icon-macros.qdocconf  macros-online.qdocconf  macros.qdocconf  qt-cpp-ignore.qdocconf  qt-defines.qdocconf  qt-html-default-styles.qdocconf  qt-html-online-styles.qdocconf  qt-html-templates-online.qdocconf  qt-html-templates.qdocconf  qtcreator-developer.qdocconf  qtcreator-project.qdocconf
doc/doxygen/: Doxyfile
doc/examples/: doc_src_plugins.qdoc
doc/pluginhowto/: adv-find-filter.qdoc  classic.css  editor-type.qdoc  find-filter.qdoc  find-support.qdoc  first-plugin.qdoc  location-filter.qdoc  menu.qdoc  mode.qdoc  nav-widget.qdoc  pluginhowto.pro  pref-pane.qdoc  progress.qdoc  project-file-wizard.qdoc  qtc-arch.qdoc  qtc-project-plugin.qdoc  qtcreator-compile.qdoc  qtcreator-pluginhowto.qdoc  qtcreator-pluginhowto.qdocconf  vcs.qdoc
doc/qtcreator/: qtcreator-online.qdocconf  qtcreator.qdocconf
doc/qtcreatordev/: qtcreator-dev-online.qdocconf  qtcreator-dev.qdocconf
doc/qtdesignstudio/: README.md  qtdesignstudio-online.qdocconf  qtdesignstudio.qdocconf  studiodoc.pro
doc/snippets/: tutorial_accelbubble.pro  tutorial_main.cpp
doc/src/: creator-vcs-fossil.qdoc  qtcreator-toc.qdoc  qtcreator.qdoc
doc/titlecase/: to-title-case.html  to-title-case.js
plugins/axivion/: CMakeLists.txt  axivion.qbs  axivion.qrc  axivionoutputpane.cpp  axivionoutputpane.h  axivionplugin.cpp  axivionplugin.h  axivionprojectsettings.cpp  axivionprojectsettings.h  axivionquery.cpp  axivionquery.h  axivionresultparser.cpp  axivionresultparser.h  axivionsettings.cpp  axivionsettings.h  axivionsettingspage.cpp  axivionsettingspage.h  axiviontr.h
plugins/fossil/: CMakeLists.txt  Fossil.json.in  annotationhighlighter.cpp  annotationhighlighter.h  branchinfo.cpp  branchinfo.h  commiteditor.cpp  commiteditor.h  configuredialog.cpp  configuredialog.h  configuredialog.ui  constants.h  fossil.pro  fossil.qbs  fossil.qrc  fossil_dependencies.pri  fossilclient.cpp  fossilclient.h  fossilcommitpanel.ui  fossilcommitwidget.cpp  fossilcommitwidget.h  fossilcontrol.cpp  fossilcontrol.h  fossileditor.cpp  fossileditor.h  fossilplugin.cpp  fossilplugin.h  fossilsettings.cpp  fossilsettings.h  optionspage.cpp  optionspage.h  optionspage.ui  pullorpushdialog.cpp  pullorpushdialog.h  revertdialog.ui  revisioninfo.cpp  revisioninfo.h
share/: CMakeLists.txt  share.pri  share.pro  share.qbs  update-share-qbs.py
share/applications/: io.qt.qtdesignstudio.desktop  org.qt-project.qtcreator.desktop
share/metainfo/: io.qt.qtdesignstudio.appdata.xml.cmakein  org.qt-project.qtcreator.appdata.xml.cmakein
share/qtcreator/: CMakeLists.txt  Info.plist  declarative  examples  license.txt  runInTerminal.command  static.pri  static.pro
src/: CMakeLists.txt  QtCreatorDeployment.cmake  pluginjsonmetadata.xsl  private_headers.pri  qtcreatorlibrary.pri  qtcreatorplugin.pri  qtcreatortool.pri  qworkbench.pri  qworkbenchlibrary.pri  qworkbenchplugin.pri  rpath.pri  src.pro  src.qbs
src/app/: CMakeLists.txt  Info.plist  Info.plist.in  app-Info.plist  app.pro  app.qbs  app_logo.qrc.cmakein  app_version.h.cmakein  app_version.h.in  app_version_header.qbs  main.cpp  main_mac.mm  prifile.icns  profile.icns  qtcreator.icns  qtcreator.rc
src/libs/: CMakeLists.txt  QtcLibrary.qbs  libs.pro  libs.qbs
src/plugins/: 0001-WelcomePage-fixes-for-the-filter-combobox-for-exampl.patch  CMakeLists.txt  QtcPlugin.qbs  plugins.pro  plugins.qbs  private_headers.pri
src/share/: CMakeLists.txt  README  share.qbs
src/shared/: CMakeLists.txt  namespace_global.h  pch_files.qbs  qtcreator_gui_pch.h  qtcreator_pch.h  qtextended_integration.h  shared.pro
(+29518 files in other folders)
